Fixed wrapping in Safari

--- a/styles.css
+++ b/styles.css
@@ -247,6 +247,7 @@ img {
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
+  width: 700px;
 }
 
 .Hero-nav {
